<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/ic_launcher_background"
            android:contentDescription="@string/backdrop"
            android:scaleType="centerCrop" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/detail_poster"
            android:layout_width="120dp"
            android:layout_height="180dp"
            android:background="@mipmap/ic_launcher"
            android:contentDescription="@string/poster"
            android:scaleType="fitXY"
            android:layout_below="@id/detail_backdrop"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/mainColor"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/movie_title"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/detail_backdrop"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/detail_voteAverage"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="2dp"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/detail_title"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/detail_voteAverage"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_releaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15sp"
            tools:text="@string/release_date"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/txt_releaseDate"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="15dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/runtime"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/detail_releaseDate"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_runtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:textSize="15sp"
            tools:text="@string/runtime"
            android:layout_toRightOf="@id/detail_poster"
            android:layout_below="@id/txt_runtime"
            android:layout_toEndOf="@id/detail_poster"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="15dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_poster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/genre"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/detail_poster"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="7dp"
            android:textSize="15sp"
            tools:text="@string/genre"
            android:layout_below="@id/txt_poster"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/overview"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@id/detail_genre"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/detail_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="20dp"
            android:lineSpacingExtra="5dp"
            android:textSize="15sp"
            tools:text="@string/overview"
            android:layout_below="@id/txt_overview"/>
    </RelativeLayout>

</ScrollView>